--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,40 @@
 name: CI
 
+
 on:
+
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+   
+   
   workflow_dispatch:
+ 
+ 
+jobs: 
 
-jobs:
   build:
+  
     runs-on: ubuntu-latest
+    
+    
     steps:
-      - uses: actions/checkout@v2
-
+    
+      - uses: actions/checkout@v3
+      
       - name: PerfAction for JMeter
+      # You may pin to the exact commit or the version.
+      # uses: QAInsights/PerfAction@f3959d0a69e7f23949add25d7e34a3ae167d6443
         uses: QAInsights/PerfAction@v3.1
         with:
+          # jmeter test plan to execute
           test-plan-path: './SAMPLE_SCRIPT_3.jmx'
         env:
           CSV_PATH: './credentials.csv'
-
-      - name: Generate HTML report
-        uses: dherault/jmeter-results-report@v2
+      
+      - name: Upload Results
+        uses: actions/upload-artifact@v3
         with:
-          source_files: result.jtl
-        id: generate-report
-
-      - name: Upload HTML report
-        uses: actions/upload-artifact@v2
-        with:
-          name: jmeter-results-report
-          path: ${{ steps.generate-report.outputs.report_path }}
+          name: jmeter-results
+          path: result.jtl
